<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutArticleRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="@dimen/row_padding">

    <ImageView
        android:id="@+id/imageViewArticle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_view"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewArticleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:ellipsize="end"
        android:gravity="start"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewArticleCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textAppearance="?attr/textAppearanceSearchResultSubtitle"
        android:textColor="#000000" />

</LinearLayout>