<resources>
    <string name="app_name">Statystyki e-Konkursy.info</string>
    <string name="title_home">Artykuły</string>
    <string name="title_top_user">Użytkownicy</string>
    <string name="title_contact">Kontakt</string>
    <string name="dialog_loading">Proszę czekać...</string>
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Anuluj</string>
    <string name="string_to_long">Za długa wartość</string>
    <string name="string_to_short">Za krótka wartość</string>
    <string name="wrong_mail">Niepoprawny adres e-mail</string>
    <string name="empty_value">To pole nie może być puste</string>
    <string name="name">Imię</string>
    <string name="mail">Adres e-mail</string>
    <string name="message">Treść wiadomości</string>
    <string name="send_form">Wyślij wiadomość</string>
    <string name="message_was_send">Wiadomość została wysłana</string>
    <string name="no_internet_connection">Wystąpił problem z połączeniem</string>
    <string name="app_permissions">Przejdź do ustawień aplikacji aby zmienić uprawnienia.</string>
    <string name="permission_denied">Aby móc korzystać z aplikacji musisz nadać odpowiednie uprawnienia.</string>
    <string name="permission_title">Brak uprawnień</string>

</resources>
